# doodba-copier-template

./: .copier-answers.yml.jinja  .env.jinja  .eslintrc.yml.jinja  .flake8  .flake8.jinja  .gitignore  .gitmodules  .isort.cfg.jinja  .module-readme.rst.j2  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierrc.yml  .prettierrc.yml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja  .ruff.toml.jinja  CONTRIBUTING.md  README.md  README.md.jinja  _macros.jinja  _traefik1_labels.yml.jinja  _traefik1_paths_labels.yml.jinja  _traefik2_hosts_labels.yml.jinja  _traefik2_labels.yml.jinja  _traefik3_labels.yml.jinja  _traefik3_paths_labels.yml.jinja  _traefik_common_labels.yml.jinja  common.yaml.jinja  copier.yml  devel.yaml.jinja  migration.yaml.jinja  migrations.py  prod.yaml.jinja  pycharm_debugger.yaml.tmpl  pycharm_debugger_port_proxy.sh  pyproject.toml  setup-devel.yaml  setup-devel.yaml.jinja  tasks.py  tasks.py.jinja  (+8 more)
.docker/: db-access.env.jinja  {% if backup_dst %}backup.env{% endif %}.jinja  {% if smtp_relay_host %}smtp.env{% endif %}.jinja
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: automerge.yml  dependabot-merge.yml  lint.yml  sync.yml  test.yml
docs/: daily-usage.md  faq.md  migrating-from-doodba-scaffolding.md  scaffolding2copier.sh
macros/: _macros.jinja  _traefik1_labels.yml.jinja  _traefik1_paths_labels.yml.jinja  _traefik2_hosts_labels.yml.jinja  _traefik2_labels.yml.jinja  _traefik3_labels.yml.jinja  _traefik3_paths_labels.yml.jinja
odoo/: .dockerignore  Dockerfile
odoo/custom/build.d/: {% if odoo_version < 11 %}10-fix-certs{% endif %}.jinja  {% if odoo_version < 11 %}20-update-pg-repos{% endif %}.jinja  {% if odoo_version < 11 %}20-update-repos{% endif %}.jinja
odoo/custom/dependencies/: apt.txt  pip.txt.jinja
odoo/custom/src/: repos.yaml
template/: .editorconfig  .eslintrc.yml.jinja  .module-readme.rst.j2  .pylintrc.jinja  README.md.jinja  _traefik2_hosts_labels.yml.jinja  _traefik3_paths_labels.yml.jinja  common.yaml.jinja  devel.yaml.jinja  prod.yaml.jinja  setup-devel.yaml.jinja  tasks.py.jinja  tasks_downstream.py  test.yaml.jinja  {% if odoo_version <= 12 %}.flake8{% endif %}.jinja
template/.docker/: db-creation.env.jinja  odoo.env.jinja  {% if backup_dst %}backup.env{% endif %}.jinja
tests/: conftest.py  helpers.py  pytest.ini  test_default_settings.py  test_doodba_qa.py  test_migrations.py  test_nitpicking.py  test_postgres.py  test_postgres_connection.py  test_routing.py  test_settings_effect.py  test_tasks_downstream.py  test_transition_to_copier.py
tests/good_diffs/: .pylintrc-mandatory.diff  .pylintrc.diff
(+100 files in other folders)
