[tool.poetry]
authors = ["Jairo Llopis <jairo.llopis@tecnativa.com>"]
description = "Copier template to maintain Doodba integration projects"
license = "BSL-1.0"
name = "doodba-copier-template"
version = "0.1.0"

[tool.poetry.dependencies]
copier = ">=8.0.0"
plumbum = "^1.8.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docker-compose = "^1.29.2"
flake8 = "^4.0.1"
invoke = "^2.1.3"
pre-commit = "^2.17.3"
pylint = "^2.12.0"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
packaging = "^23.1"
pydantic = "^1.10.10"

[tool.isort]
# See https://github.com/psf/black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
