[tool.poetry]
authors = ["Jairo Llopis <jairo.llopis@tecnativa.com>"]
description = "Copier template to maintain Doodba integration projects"
license = "BSL-1.0"
name = "doodba-copier-template"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
copier = ">=9"
plumbum = "^1.8.2"
python = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^6.1.0"
invoke = "^2.2.0"
pylint = "^3.0.2"
pytest = "^8.3.5"
pytest-xdist = "^3.3.1"
packaging = "^23.1"
requests = "^2.32.4"
pre-commit = "^3.3.3"
python-on-whales = "^0.78.0"

[tool.isort]
# See https://github.com/psf/black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

# ruff

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]
